DefaultController has been configured to install the DSN

--- a/css/install/main.css
+++ b/css/install/main.css
@@ -53,5 +53,9 @@ hr {
 .path-field {
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    width: 80%;
+}
+
+.input-small {
+    width: 45%;
 }
