--- a/css/admin/main.css
+++ b/css/admin/main.css
@@ -160,3 +160,13 @@ body > .navbar .brand {
 #wmd-preview {
     display: none;
 }
+
+.sidebarNav .well {
+    padding-top: 14px;
+}
+
+.sidebarNav .well h5 {
+    margin-top: 0px;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #e1e1e8;
+}
