--- a/css/admin/main.css
+++ b/css/admin/main.css
@@ -207,3 +207,9 @@ body > .navbar .brand {
 .transition {
     border: 1px solid #468847;
 }
+
+.path-field {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
