Cleaning up, deciding on if I need managed settings or not

--- a/css/admin/main.css
+++ b/css/admin/main.css
@@ -337,3 +337,8 @@ body > .navbar .brand {
     position: absolute;
     top: 11px;
 }
+@media (max-width: 767px) {
+    tfoot {
+        display:none;
+    }   
+}
