--- a/css/default/main.css
+++ b/css/default/main.css
@@ -1,4 +1,5 @@
 
+/** Mobile View **/
 @media (max-width: 767px) {
     body {
         padding: 0px;
@@ -18,6 +19,18 @@ footer a, footer a:visited, footer a:active {
 
 footer a:hover {
     color: #7daf27;
+}
+
+footer p, footer ul {
+    margin-bottom: 10px;
+    color: #777;
+    font-size: 12px;
+    line-height: 14px;
+}
+
+footer ::selection {
+    background: #7daf27;
+    color: #fff;
 }
 
 footer h5 {
@@ -72,6 +85,7 @@ footer .footer-bottom-block {
 }
 
 footer .footer-bottom-block .cii-menu ul {
+    font-size: 11px;
     margin: 0px;
 }
 footer .footer-bottom-block .cii-menu ul li {
