--- a/css/default/main.css
+++ b/css/default/main.css
@@ -511,6 +511,9 @@ main .comment .comment-byline-footer span:hover {
 	transition: all .2s ease-in-out;
 }
 
+main .comment .comment-byline-footer span.flagged {
+	color: #CE4444;
+}
 main .comment .comment-body {
 	padding-left: 10px;
 	margin-left: 30px;
