--- a/css/default/main.css
+++ b/css/default/main.css
@@ -11,6 +11,9 @@ body {
 	background-image: url("../images/glyphicons-halflings-red.png");
 }
 
+input[type="text"], input[type="password"] {
+	min-height: 30px;
+}
 /** Misc Styles **/
 div[class*='-indicator'] {
 	padding-left: 20px;
@@ -544,6 +547,43 @@ main .comment .author-indicator > .comment-body {
 	margin-left: -10px;
 	padding-left: 0px;
 }
+
+main .login-container {
+	margin-left: auto;
+	margin-right: auto;
+	width: 40%;
+	min-width: 300px;
+}
+
+main .login-form-container {
+	margin-bottom: 10px;
+}
+
+main .login-form-footer {
+	padding-left: 5px;
+	padding-right: 5px;
+	margin-top: -8px;
+}
+
+main .login-form-links {
+	font-size: 12px;
+	color: #aaa;
+}
+
+main #login-form {
+	margin-left: auto;
+	margin-right: auto;
+	width: 80%;
+}
+
+main #login-form input:first-of-type {
+	margin-top: 15px;
+}
+
+main #login-form input[type="text"], main #login-form input[type="password"] {
+	width: 100%;
+}
+
 /** Footer **/
 footer a, footer a:visited, footer a:active {
     color: #999; 
