--- a/protected/modules/admin/assets/css/main.css
+++ b/protected/modules/admin/assets/css/main.css
@@ -341,7 +341,7 @@ body > .navbar .brand {
 }
 
 #sharebox #close {
-    background: no-repeat url(../../images/admin/bg.png) -33px -31px;
+    background: no-repeat url(../images/bg.png) -33px -31px;
     height: 9px;
     width: 9px;
     cursor: pointer;
