Adding a password strength meter. Lots of client side JS for this

--- a/themes/default/assets/css/main.css
+++ b/themes/default/assets/css/main.css
@@ -665,6 +665,55 @@ main .addthis_toolbox {
 	padding-bottom: 10px;
 }
 
+main .password_strength_container {
+	position: relative;
+	width: 103%;
+	margin-top: -6px;
+	height: 10px;
+}
+
+main .password_strength_bg {
+	height: 4px;
+	background-color: #e8e8e8;
+	width: 100%;
+	position: absolute;
+	left: 0;
+}
+
+main .password_strength {
+	height: 4px;
+	background-color: #c81818;
+	width: 0;
+	position: absolute;
+	left: 0;
+}
+
+main .password_strength .great {
+	background-color: rgb(39, 179, 15);
+}
+
+main .password_strength .good {
+	background-color: rgb(166, 192, 96);
+}
+
+main .password_strength .poor {
+	background-color: rgb(255, 172, 29);
+}
+
+main .password_strength_separator {
+	height: 4px;
+	width: 2px;
+	background-color: #fff;
+	position: absolute;
+	left: 0;
+}
+
+main .password_strength_desc {
+	float: right;
+	margin-top: 6px;
+	line-height: 16px;
+}
+
 /** Footer **/
 footer a, footer a:visited, footer a:active {
     color: #999; 
